# combined_INS

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  config.yaml  config_data2_baseline_eskf.yaml  config_data2_baseline_inekf_best.yaml  config_data2_baseline_inekf_ctrl.yaml  config_data2_baseline_true_iekf.yaml  config_data2_gnss.yaml  config_data2_gnss30_inekf.yaml  config_data2_gnss30_inekf_best.yaml  config_data2_gnss30_postfix_gnss_odo_mount.yaml  config_data2_gnss30_postfix_gnsslever.yaml  config_data2_gnss30_true_iekf.yaml  config_data2_gnss_adaptive_baseline.yaml  config_data2_gnss_adaptive_tuned.yaml  config_data2_gnss_adaptive_zfull.yaml  config_data2_gnss_clean.yaml  config_data2_gnss_legacy_control.yaml  config_data2_gnss_nonadaptive_allon.yaml  config_data2_gnss_nonadaptive_allon_strict.yaml  config_data2_gnss_nonadaptive_allon_strict_eskf.yaml  config_data2_gnss_nonadaptive_allon_strict_inekf.yaml  config_data2_ins_odo_nhc.yaml  config_data2_ins_only.yaml  config_data2_research_seed_eskf.yaml  config_data4_baseline_eskf.yaml  config_data4_baseline_inekf_best.yaml  config_data4_baseline_true_iekf.yaml  config_data4_gnss30_eskf.yaml  config_data4_gnss30_inekf_best.yaml  config_data4_gnss30_true_iekf.yaml  plot_navresult.py  test_config.yaml  walkthrough.md
apps/: data_converter_main.cpp  eskf_fusion_main.cpp  jacobian_audit_main.cpp  odo_nhc_bgz_jacobian_fd_main.cpp  regression_checks_main.cpp  uwb_generator_main.cpp
docs/: README.md  cpp_refactor_baseline.md  odo-nhc-bgz-chain-bug-plan.md  repo_layout.md
docs/notes/: tips.md  (+1 more)
tests/: test_build_data2_staged_g5_6x_interactive_report.py  test_cleanup_legacy_output.py  test_config_data2_baseline_current.py  test_gnss_update_debug_velocity_covariance_headers.py  test_plot_navresult.py  test_run_data2_baseline_current.py  test_run_data2_baseline_full_ins_gnss.py  test_run_data2_baseline_ins_gnss_inekf_outage_60on100off_from_eskf_best.py  test_run_data2_baseline_ins_gnss_outage_no_odo_nhc.py  test_run_data2_full_ins_gnss_bias_scale_process_sweep.py  test_run_data2_fullwindow_attitude_bias_coupling.py  test_run_data2_ins_gnss_gnss_noise_consistency_check.py  test_run_data2_kf_gins_gnss_update_feedback_compare.py  test_run_data2_kf_gins_outage_compare.py  (+11 more)
(+162 files in other folders)
